0.4.3 (unreleased)
=====
* Split log string by lines before printing.
* Cleanup daemon args.

0.4.2 (27-02-2020)
=====
* Added `Conf` values validation API, thanks to @CyberDomovoy
* Switched to dune

0.4.1 (09-11-2018)
=====
* Use seperate thread for logging, finer-grained critical section to avoid
  deadlock with `Gc.finalise` logging messages.

0.4.0 (08-18-2018)
=====
* Raise Root_prohibited exception instead of exiting when running as root.

0.3.4 (08-10-2017)
=====
* Added on_change to Conf.t

0.3.3 (11-04-2017)
=====
* Catch USR1 signal regardless of logging configuration.

0.3.2 (03-08-2015)
=====
* Dummy github release.

0.3.1 (08-05-2013)
=====
* Added daemon cleanup that removed
  PID file.

0.3.0 (25-06-2012)
=====
* Added Conf.alias

0.2.2 (26-06-2011)
=====
* Cleaned up daemonization code,
  added optional change of user, 
  should be useful when running 
  as root.

0.2.1 (18-09-2010)
=====
* Fixed requires, s/thread/threads/

0.2.0 (19-08-2010)
=====
* Use Thread.join instead of Thread.wait_signal
  under Win32 (Thread.wait_signal is not implemented
  in this case). Also do not use sigmask since it is 
  not implemented either.
* Added support for Syslog when detected.

0.1.6 (15-04-2008)
=====
* Added support for --enable-debugging configure option
* Reopen stdin/out/er instead of closing them
* Install .cmx file when available
* Set as blocked signals that we use with Thread.wait_signal,
  i.e. sigterm and sigint. Those are not blocked
  by default on some systems (e.g. freeBSD).

0.1.5 (12-12-2007)
=====
* Fix: better daemon setup:
  + Close stdout and stderr
  + Set umask to 0
  + Change pwd to /

0.1.4 (10-17-2007)
=====
* Fix: do not include whole thread and unix lib in dtools lib
* Conf: full rewrite, keys are documented
* Conf: new: --conf-descr and --conf-dump features
* Log: full rewrite, loggers are associated to keys
* Log: fix: small error in timestamp generation

0.1.3 (02-03-2007)
=====
* Fixed a deadlock